# wp2shell-detect

./: .gitignore  LICENSE  README.md  pyproject.toml  test_wp2shell_detect.py  wp2shell_detect.py
.github/workflows/: publish.yml
