[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wp2shell-detect"
version = "1.0.0"
description = "Blackbox, non-intrusive detector for wp2shell (WordPress core pre-auth RCE, CVE-2026-63030 / CVE-2026-60137)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [{ name = "own2pwn", email = "contact@own2pwn.fr" }]
keywords = [
    "wordpress",
    "cve",
    "security",
    "vulnerability",
    "wp2shell",
    "scanner",
    "rce",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = []

[project.urls]
Homepage = "https://own2pwn.fr"
Repository = "https://github.com/own2pwn-fr/wp2shell-detect"
Writeup = "https://own2pwn.fr/articles/appsec/wp2shell-wordpress-rce"

[project.scripts]
wp2shell-detect = "wp2shell_detect:main"

[tool.hatch.build.targets.wheel]
include = ["wp2shell_detect.py"]

[tool.hatch.build.targets.sdist]
include = [
    "wp2shell_detect.py",
    "test_wp2shell_detect.py",
    "README.md",
    "LICENSE",
]
